--- a/start/public_html/resources/css/divas.css
+++ b/start/public_html/resources/css/divas.css
@@ -18,7 +18,6 @@ height: 566px;
 }
 
 #wrap_header {
-background: rgba(0,0,0,0.75);
 height: 90px;
 margin: 0px auto;
 }
@@ -30,11 +29,11 @@ margin: 0px auto;
 	color:#FFF;
 }
 #logo {
-width: 212px;
-height: 67px;
+width: 220px;
+height: 85px;
 float: left;
 margin-left: 20px;
-margin-top: 11px;
+margin-top: 2px;
 }
 
 .head_menu ul {
@@ -57,7 +56,7 @@ text-decoration: underline;
 border: none;
 outline: none;
 height: 90px;
-color: #ffa627;
+color: #802712;
 padding-left: 18px;
 padding-right: 18px;
 }
